# BayesianOptimizeInvest

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml  cost_model.yaml  universe.yaml
configs/market_models/: gbm.yaml  student_t.yaml
configs/strategies/: buy_and_hold_world.yaml
configs/strategies/core_satellite/: core_satellite_65_20_15.yaml  core_satellite_85_15_nasdaq.yaml  core_satellite_85_15_sp500.yaml  core_satellite_85_15_world.yaml  core_satellite_90_10_nasdaq.yaml  core_satellite_90_10_sp500.yaml  core_satellite_90_10_world.yaml
configs/strategies/mono/: mono_nasdaq.yaml  mono_nasdaq_x2.yaml  mono_sp500.yaml  mono_world.yaml
configs/strategies/multi/: multi_nasdaq_nasdaqx2.yaml  multi_sp500_nasdaqx2.yaml  multi_world_nasdaqx2.yaml
configs/strategies/vol_targeting/: vol_targeting_world.yaml
pea-sim-parametric/: .gitignore  README.md  pyproject.toml  requirements.txt
pea-sim-parametric/configs/: base.yaml  universe.yaml
pea-sim-parametric/configs/market_models/: regimes.yaml
pea-sim-parametric/configs/strategies/: core_satellite_world_nasdaq2x.yaml  nasdaq2x_only.yaml  vol_targeting_world_with_leverage.yaml
pea-sim-parametric/src/pea_sim/: __init__.py  cli.py
pea-sim-parametric/tests/: test_market_models.py  test_portfolio_engine.py
src/bayesian_optimize_invest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/invest_sim/: cli.py
src/invest_sim/config/: __init__.py  load.py  (+1 more)
src/pea_sim/: cli.py
tests/: test_configs.py  test_end_to_end.py  test_market_models.py  test_portfolio_engine.py
(+44 files in other folders)
