[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesian-optimize-invest"
version = "0.1.0"
description = "Parametric Monte Carlo simulator for portfolios with ETF"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Portal Frame Inc"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "typer>=0.9",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[project.scripts]
invest-sim = "invest_sim.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
